--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/20aed8f187.js" crossorigin="anonymous"></script>
@@ -18,102 +19,68 @@
     <div class="container-fluid">
         <div class="row">
             <header role="header">
-
-
-                <nav role="navigation" id="header_nav">
+                <nav class="topbar fixed-top" role="navigation" id="header_nav">
                     <div class="inner">
                         <div class="m-left my-5">
-                            <span class="logo">e-Drive</span>
+                            <span class="topbar-logo">e-Drive</span>
                         </div>
-
-                        <div class="m-right my-3">
+                        <div class="m-right my-5">
                             <a class="box col-sm-3" id="accueil" href="#">Accueil</a>
-                            <a class="box col-sm-3" id="monPanier" href="#">Mon panier   <i class="fas fa-shopping-cart"></i></a>
-
+                            <a class="box col-sm-3" id="monPanier" href="#">Mon panier <i
+                                    class="fas fa-shopping-cart"></i></a>
                         </div>
                     </div>
                 </nav>
             </header>
             <div id="banner">
-                <img src="image/carousel1.png">
+                <img src="image/carousel3.jpg">
             </div>
         </div>
     </div>
     <!-----------------------------------------------------CONTENT---------------------------------------------------------------------->
-    <div class="container-fluid">
-
-
-        <div class="content">
-            <div class="row">
-
-                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, distinctio possimus sapiente labore id non nihil obcaecati nesciunt a odit quos similique, in ad cum quia maiores ducimus? Accusamus, aspernatur.</h1>
-
-
-
-                <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor,
-                    sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum
-                    dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis
-                    porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-                    sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum
-                    recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos
-                    deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae
-                    eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit
-                    dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab
-                    reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente
-                    sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus
-                    necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur
-                    vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus,
-                    est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur
-                    voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident
-                    doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore
-                    eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium
-                    voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam
-                    sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis
-                    ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor,
-                    sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum
-                    dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis
-                    porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa,
-                    sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum
-                    recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos
-                    deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae
-                    eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit
-                    dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab
-                    reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente
-                    sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus
-                    necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur
-                    vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus,
-                    est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur
-                    voluptatem alias magni voluptate, quibusdam sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident
-                    doloribus harum, ad tempora facilis ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore
-                    eveniet nostrum at minima neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium
-                    voluptas non! lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, excepturi iusto voluptatem eos deleniti facilis? Facilis, sapiente sunt dignissimos, id officia pariatur voluptatem alias magni voluptate, quibusdam
-                    sit et . Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis porro doloribus pariatur molestiae eius. Numquam sunt amet repellendus necessitatibus praesentium magnam provident doloribus harum, ad tempora facilis
-                    ipsum dolorem id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, sint quas adipisci amet reprehenderit dolore quaerat, facere tenetur vel qui dignissimos quos omnis officia labore eveniet nostrum at minima neque.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, hic? Minima iure laborum recusandae deserunt adipisci qui ab reprehenderit dolorem, doloribus, est sunt enim perspiciatis a, possimus praesentium voluptas non! lorem
-
-                </p>
-
+    <div class="container body">
+        <div class="row" id="row_cards">
+            <div class="card">
+                <div class="card-header">
+                    <hi> Livres</hi>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo
+                        mollitia tempore reiciendis, vel, sequi.
+                    </p>
+                    <a href="#" class="btn">Read more</a>
+                </div>
             </div>
         </div>
+
+
+
+
+
+
+
+    </div>
     </div>
     <!-----------------------------------------------------FOOTER------------------------------------------------------------------------>
     <footer id="footer" class="d-flex">
         <div class="container-fluid">
             <div class="row">
 
-                <div class="col-sm-8 d-flex link" id="links">
-                    <a class="nav-link contact" href="">Contact</a>
-                    <a class="nav-link CGU" href="">CGU</a>
-                </div>
-                <div class="col-sm-4">
-                    <i class="fab fa-twitter-square fa-3x" id="twitter"></i>
-                    <i class="fab fa-youtube-square fa-3x" id="youtube"></i>
+                <div class="col-sm-12 text-center">
+                    <ul class="nav flex-column">
+                        <li class="mt-5">
+                            <i class="fab fa-twitter-square fa-3x" id="twitter"></i>
+                            -
+                            <i class="fab fa-youtube-square fa-3x" id="youtube"></i>
+                        </li>
+                        <li>
+                            <div class="d-flex float-right " id="links">
+                                <a class="nav-link contact" href="">Contact</a>
+                                <a class="nav-link CGU" href="">CGU</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
 
                 <div>
@@ -123,7 +90,7 @@
         </div>
     </footer>
     <div id="banner_bot">
-        <img src="image/carousel2.png">
+        <img src="image/carousel4.jpg">
     </div>
 
 
@@ -154,9 +121,15 @@
 
     <!--------------------------------------------------------------------->
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 </body>
 
