--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/20aed8f187.js" crossorigin="anonymous"></script>
@@ -19,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <header role="header">
-                <nav class="topbar fixed-top" role="navigation" id="header_nav">
+                <nav class="topbar" role="navigation" id="header_nav">
                     <div class="inner">
                         <div class="m-left my-5">
                             <span class="topbar-logo">e-Drive</span>
@@ -39,20 +38,68 @@
     </div>
     <!-----------------------------------------------------CONTENT---------------------------------------------------------------------->
     <div class="container body">
+        <input class="form-control" type="text" placeholder="Rechercher un Client" id="searchValue" autofocus>
+
+
+
+
+
+        <ul class="filter side-nav" id="filter">
+            <select id="bookSelect">
+            <option selected>10</option>
+            <option>20</option>
+            <option>30</option>
+            <option>40</option>
+
+        </select>
+
+        </ul>
         <div class="row" id="row_cards">
-            <div class="card">
-                <div class="card-header">
-                    <hi> Livres</hi>
-                </div>
-                <div class="card-body">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo
-                        mollitia tempore reiciendis, vel, sequi.
-                    </p>
-                    <a href="#" class="btn">Read more</a>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+        <!--------------------------------CARDS--------------------------------->
+        <div class="card" id="cardEDrive" hidden="true">
+            <div class="card-header">
+                <div id="toto">
+                    <img src="data/BD/BD/images/noComicsMini.jpeg" id="albumMini">
                 </div>
             </div>
+            <div class="card-body">
+                <p id="messageId">
+                    <label for="id">Id de l'album :</label>
+                    <input type="number" required id="id" value="0" min="0" title="Saisissez un numéro et validez">
+                </p>
+                <p>
+                    <label for="serie">Série :</label>
+                    <input type="text" id="serie" readonly>
+
+                    <label for="numero">Album N° :</label>
+                    <input type="text" id="numero" readonly>
+
+                    <label for="titre">Titre :</label>
+                    <input type="text" id="titre" readonly>
+
+                    <label for="auteur">Auteur :</label>
+                    <input type="text" id="auteur" readonly>
+                </p>
+                <p>
+                    <label for="prix">Prix :</label>
+                    <input type="number" id="prix" readonly>
+                </p>
+            </div>
+            <a href="#" class="btn" onclick="#">Lire plus</a>
         </div>
+    </div>
 
 
 
@@ -70,8 +117,7 @@
                 <div class="col-sm-12 text-center">
                     <ul class="nav flex-column">
                         <li class="mt-5">
-                            <i class="fab fa-twitter-square fa-3x" id="twitter"></i>
-                            -
+                            <i class="fab fa-twitter-square fa-3x" id="twitter"></i> -
                             <i class="fab fa-youtube-square fa-3x" id="youtube"></i>
                         </li>
                         <li>
@@ -120,17 +166,16 @@
 
 
     <!--------------------------------------------------------------------->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script src="data/albums.js"></script>
+    <script src="data/series.js"></script>
+    <script src="data/auteurs.js"></script>
+    <script src="js/cards.js"></script>
+
 </body>
 
 </html>
